--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -17,7 +17,8 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.ANOOGAMES.SudokuMasterPremiumOffline">Sudoku Master Premium: Offline</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.ANOOGAMES.WordscapesWordSearchGame">Word Search Game: Offline</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.IQPuzzlesGames.CrosswordQuestPremiumGames">Crossword Quest Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.cscmobi.cooking.love">Cooking Kawaii - cooking games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.cscmobi.merge.cafe.premium">Merge Cafe Premium -Home Decor</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.cscmobi.merge.city.premium">Merge City Premium -Home decor</a></div>
@@ -26,6 +27,9 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gdx.dh.game.asmg">Pixel Knights VIP</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.livezen.BurningSky.vip">Burning Sky VIP</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.nomadgames.dungeonmaster">Everybody's RPG: Reboot</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pgstudio.survivalpro">Live or Die: Survival Pro</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.redantz.game.za3p">Zombie Age 3 Premium: Survival</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.smartgames.word.puzzle.block.crush.wonders">Word Game Wonders: Crossword</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zitga.empire.warriors.td.tower.defense">Empire Warrior: Tower Defense</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zitga.guardian.war.premium.action.rpg.adventure.games">Guardian War: Ultimate Edition</a></div>
     </div>
