--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,7 +17,10 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://gaming.amazon.com/fallout-new-vegas-ultimate-edition-gog/dp/amzn1.pg.item.8b24f09c-6cef-41d7-9a68-21f275c1c110?ingress=amzn&ref_=SM_FalloutNewVegasUltimateEdition_S02_FGWP_CRWN">Fallout: New Vegas Ultimate Edition</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/xcom-2-gog/dp/amzn1.pg.item.13e05c49-cb97-43b3-82c2-0fab0271a873?ingress=amzn&ref_=SM_XCOM2_S01_FGWP_CRWN">XCOM 2</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/true-fear-forsaken-souls-part-1-gog/dp/amzn1.pg.item.be9cd055-7bed-472e-a209-2c3eea9c5115?ingress=amzn&ref_=SM_TrueFearForsakenSoulsPart1_S01_FGWP_CRWN">True Fear: Forsaken Souls Part 1</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/empty-shell-gog/dp/amzn1.pg.item.2cd3ca8d-c84b-46a1-82f4-040a0c4ae02f?ingress=amzn&ref_=SM_EMPTYSHELL_S01_FGWP_CRWN">EMPTY SHELL</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/tormented-souls-aga/dp/amzn1.pg.item.11649f66-25ae-443a-a472-15f4a6d7180b?ingress=amzn&ref_=SM_TormentedSouls_S01_FGWP_CRWN">Tormented Souls</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/sid-meiers-civilization-iv-the-complete-edition-gog/dp/amzn1.pg.item.f2368999-6acb-4f03-9f99-b14711e926ee?ingress=amzn&ref_=SM_SidMeiersCivilizationIVTheCompleteEdition_S01_FGWP_CRWN">Sid Meier's Civilization IV: The Complete Edition</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/vampire-the-masquerade-reckoning-of-new-york-epic/dp/amzn1.pg.item.2dd336c0-5141-4740-91d5-40990b19ebcc?ingress=amzn&ref_=SM_VampireTheMasqueradeReckoningofNewYork_S01_FGWP_CRWN">Vampire: The Masquerade - Reckoning of New York</a></div>
