--- a/game_pages/epic.html
+++ b/game_pages/epic.html
@@ -17,7 +17,8 @@
         </a>
     </div>
     <div class="game-container">
-        <p>No free games available today.</p>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/amnesia-the-bunker-9d5799">Amnesia: The Bunker</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/samorost-3-0c4489">Samorost 3</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
