--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -26,8 +26,8 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.eggies.triviamaster">Trivia Master - Quiz Games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.fori.slimelegends">Slime Legends - Survivor</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gamefirst.savetheearth">ECO Inc. Save the Earth</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.isavasokur.boymate104p">Brain Game - Boymate10 4P</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gdx.dh.game.asmg">Pixel Knights VIP</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.livezen.BurningSky.vip">Burning Sky VIP</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.nomadgames.dungeonmaster">Everybody's RPG: Reboot</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pgstudio.survivalpro">Live or Die: Survival Pro</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.redantz.game.za3p">Zombie Age 3 Premium: Survival</a></div>
