--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,8 +17,11 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://gaming.amazon.com/claims/fallout-3-game-of-the-year-edition-gog/dp/amzn1.pg.item.91c2b55b-e883-4bf7-8815-08f486d7ca35?g=s&ingress=amzn&ref_=SM_Fallout3GameoftheYearEdition_S02_FGWP_CRWN">Fallout 3: Game of the Year Edition</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/fallout-new-vegas-ultimate-edition-gog/dp/amzn1.pg.item.8b24f09c-6cef-41d7-9a68-21f275c1c110?g=s&ingress=amzn&ref_=SM_FalloutNewVegasUltimateEdition_S02_FGWP_CRWN">Fallout: New Vegas Ultimate Edition</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/xcom-2-gog/dp/amzn1.pg.item.13e05c49-cb97-43b3-82c2-0fab0271a873?g=s&ingress=amzn&ref_=SM_XCOM2_S01_FGWP_CRWN">XCOM 2</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/claims/true-fear-forsaken-souls-part-2-gog/dp/amzn1.pg.item.36a308e9-6a4d-42a0-8f56-120492381506?g=s&ingress=amzn&ref_=SM_TrueFearForsakenSoulsPart2_S01_FGWP_CRWN">True Fear: Forsaken Souls Part 2</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/claims/hellslave-gog/dp/amzn1.pg.item.a7fa52c8-634e-4e62-8c47-426c4a50e657?g=s&ingress=amzn&ref_=SM_Hellslave_S01_FGWP_CRWN">Hellslave</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/true-fear-forsaken-souls-part-1-gog/dp/amzn1.pg.item.be9cd055-7bed-472e-a209-2c3eea9c5115?g=s&ingress=amzn&ref_=SM_TrueFearForsakenSoulsPart1_S01_FGWP_CRWN">True Fear: Forsaken Souls Part 1</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/empty-shell-gog/dp/amzn1.pg.item.2cd3ca8d-c84b-46a1-82f4-040a0c4ae02f?g=s&ingress=amzn&ref_=SM_EMPTYSHELL_S01_FGWP_CRWN">EMPTY SHELL</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/tormented-souls-aga/dp/amzn1.pg.item.11649f66-25ae-443a-a472-15f4a6d7180b?g=s&ingress=amzn&ref_=SM_TormentedSouls_S01_FGWP_CRWN">Tormented Souls</a></div>
@@ -33,6 +36,7 @@
         <div class="game-item"><a href="https://gaming.amazon.com/claims/heroes-of-loot-gog/dp/amzn1.pg.item.8d2b0758-5651-4021-b4a9-85283ceb5643?g=s&ingress=amzn&ref_=SM_HeroesofLoot_S01_FGWP_CRWN">Heroes of Loot</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/heroes-of-loot-2-gog/dp/amzn1.pg.item.960ca075-f916-4013-a454-4d7d4d53a496?g=s&ingress=amzn&ref_=SM_HeroesofLoot2_S01_FGWP_CRWN">Heroes of Loot 2</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/claims/the-academy-the-first-riddle-aga/dp/amzn1.adg.product.76ca0756-b581-4cc7-92be-2183c2c43f51?g=s&ingress=amzn&ref_=SM_TheAcademyTheFirstRiddle_S02_FGWP_CRWN">The Academy: The First Riddle</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/claims/lost-and-found-agency-ce-legacy/dp/amzn1.pg.item.c42c9729-d0b8-4462-97bd-f5acd3993964?g=s&ingress=amzn&ref_=SM_LostFoundAgencyCE_S01_FGWP_CRWN">Lost & Found Agency - CE</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
