--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -18,17 +18,20 @@
     </div>
     <div class="game-container">
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zigzagame.evertale">Evertale</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.Gameplete.CardFantasyPremium">TripleFantasy Premium</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.dd.mk.vip">[VIP] Missile Dude RPG : idle</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.eapublishing.dhsw.paid">Shadow Hunter: Offline Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.eggies.spellingmaster">Spelling Master - Quiz Games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.eggies.triviamaster">Trivia Master - Quiz Games</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.empire.kingdom.idle.defense.td.archer.game.premium">Empire Kingdom: Idle Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.isavasokur.boymate104p">Brain Game - Boymate10 4P</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gtm.trafficpuzzlepremium">Traffic Jam Cars Puzzle Legend</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.redantz.game.za2p">Zombie Age 2 Premium: Shooter</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.smalladventuregame.smallredball">Ball Zocos Adventure Game</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unimob.castle.defender.heroes.premium">Castle Defender Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.vtwo.athree.epl.gp">Avalar: Raid of Shadow Premium</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.whitewind.mathwarrior">MathWarrior</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zigzagame.tokyodebunkerpremium">Tokyo Debunker: Urban Legends</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zitga.ninja.stickman.legends.shadow.wars">Stickman Legends Offline Games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=net.defensezone2">Defense Zone 2 HD</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=net.defensezone3.ultra">Defense Zone 3 Ultra HD</a></div>
     </div>
