--- a/game_pages/steam.html
+++ b/game_pages/steam.html
@@ -19,6 +19,7 @@
     <div class="game-container">
         <div class="game-item"><a href="https://store.steampowered.com/app/503560/911_Operator/?snr=1_7_7_2300_150_1">911 Operator</a></div>
         <div class="game-item"><a href="https://store.steampowered.com/app/569610/Distant_Space/?snr=1_7_7_2300_150_1">Distant Space</a></div>
+        <div class="game-item"><a href="https://store.steampowered.com/app/2627220/The_Texas_Chain_Saw_Massacre__Slaughter_Family_Bloody_Skins_Pack/?snr=1_7_7_2300_150_1">The Texas Chain Saw Massacre - Slaughter Family Bloody Skins Pack</a></div>
         <div class="game-item"><a href="https://store.steampowered.com/app/3266380/The_Texas_Chain_Saw_Massacre__Rush_Week__Halloween_Outfit_Pack/?snr=1_7_7_2300_150_1">The Texas Chain Saw Massacre - Rush Week - Halloween Outfit Pack</a></div>
     </div>
 <footer>
