--- a/game_pages/epic.html
+++ b/game_pages/epic.html
@@ -17,8 +17,7 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/bendy-and-the-ink-machine-60cf5a">Bendy and the Ink Machine</a></div>
-        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/five-nights-at-freddys-into-the-pit-99c563">Five Nights at Freddy's: Into the Pit</a></div>
+        <p>No free games available today.</p>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
