--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -24,6 +24,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.clockmaker.jewellegend.classic.match3.puzzle">Jewels Charm: Match 3 Game Pro</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.dd.mk.vip">[VIP] Missile Dude RPG : idle</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.empire.kingdom.idle.defense.td.archer.game.premium">Empire Kingdom: Idle Premium</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.infinity.traffix">Traffix: Traffic Simulator</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.memof.at">Memory Game: Fruit</a></div>
     </div>
 <footer>
